Fail build for `static transitive` modules
This adds a Groovy script that fails the build
if any optional JPMS module has the `transitive` qualifier.

We remove the `transitive` modifier from all optional dependencies.

Closes #2929.

Co-authored-by: Volkan Yazıcı <volkan@yazi.ci>

--- a/log4j-jul/pom.xml
+++ b/log4j-jul/pom.xml
@@ -29,8 +29,6 @@
   <description>The Apache Log4j implementation of java.util.logging</description>
 
   <properties>
-    <log4jParentDir>${basedir}/..</log4jParentDir>
-
     <!--
       ~ OSGi and JPMS options
       -->
@@ -38,6 +36,10 @@
       <!-- Log4j Core is optional -->
       org.apache.logging.log4j.core.*;resolution:=optional
     </bnd-extra-package-options>
+    <bnd-extra-module-options>
+      <!-- Optional dependencies can not be transitive -->
+      org.apache.logging.log4j.core;transitive=false
+    </bnd-extra-module-options>
 
     <!-- PTS requires using the JUnit Platform, which interferes with JUL initialization -->
     <predictive.test.selection.enabled>false</predictive.test.selection.enabled>
