--- a/pom.xml
+++ b/pom.xml
@@ -232,6 +232,7 @@
 
     <!-- Last comes the rest of the modules in alphabetical order.
          Note that modules here must have a corresponding entry in `dependencyManagement > dependencies` block below! -->
+    <module>jul-to-log4j</module>
     <module>log4j-async-logger</module>
     <module>log4j-compress</module>
     <module>log4j-config-jackson</module>
@@ -373,6 +374,12 @@
 
   <dependencyManagement>
     <dependencies>
+
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>jul-to-log4j</artifactId>
+        <version>${project.version}</version>
+      </dependency>
 
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
@@ -569,12 +576,6 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-to-slf4j</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-web</artifactId>
         <version>${project.version}</version>
       </dependency>
 
