--- a/log4j-parent/pom.xml
+++ b/log4j-parent/pom.xml
@@ -117,7 +117,6 @@
     <javax-jms.version>2.0.1</javax-jms.version>
     <java-allocation-instrumenter.version>3.3.4</java-allocation-instrumenter.version>
     <jctools.version>4.0.5</jctools.version>
-    <jetty.version>9.4.55.v20240627</jetty.version>
     <jmdns.version>3.5.12</jmdns.version>
     <jmh.version>1.37</jmh.version>
     <json-unit.version>3.4.1</json-unit.version>
@@ -140,11 +139,8 @@
     <osgi.resource.version>1.0.1</osgi.resource.version>
     <pax-exam.version>4.13.5</pax-exam.version>
     <plexus-utils.version>3.5.1</plexus-utils.version>
-    <slf4j2.version>2.0.15</slf4j2.version>
     <system-stubs.version>2.1.7</system-stubs.version>
-    <tomcat-juli.version>10.1.30</tomcat-juli.version>
     <velocity.version>1.7</velocity.version>
-    <wiremock.version>2.35.2</wiremock.version>
     <xmlunit.version>2.10.0</xmlunit.version>
 
     <!-- =====================================================
@@ -208,14 +204,6 @@
         <groupId>com.fasterxml.jackson</groupId>
         <artifactId>jackson-bom</artifactId>
         <version>${jackson-bom.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-bom</artifactId>
-        <version>${jetty.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -576,12 +564,6 @@
       </dependency>
 
       <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>${slf4j2.version}</version>
-      </dependency>
-
-      <dependency>
         <groupId>uk.org.webcompere</groupId>
         <artifactId>system-stubs-core</artifactId>
         <version>${system-stubs.version}</version>
@@ -595,12 +577,6 @@
       </dependency>
 
       <dependency>
-        <groupId>org.apache.tomcat</groupId>
-        <artifactId>tomcat-juli</artifactId>
-        <version>${tomcat-juli.version}</version>
-      </dependency>
-
-      <dependency>
         <groupId>org.graalvm.truffle</groupId>
         <artifactId>truffle-api</artifactId>
         <version>${graalvm.version}</version>
@@ -610,13 +586,6 @@
         <groupId>org.apache.velocity</groupId>
         <artifactId>velocity</artifactId>
         <version>${velocity.version}</version>
-      </dependency>
-
-      <!-- Used for testing `HttpAppender`: -->
-      <dependency>
-        <groupId>com.github.tomakehurst</groupId>
-        <artifactId>wiremock-jre8</artifactId>
-        <version>${wiremock.version}</version>
       </dependency>
 
       <dependency>
@@ -750,7 +719,8 @@
                     <!-- JCL replacements -->
                     <exclude>org.slf4j:jcl-over-slf4j</exclude>
                     <exclude>org.springframework:spring-jcl</exclude>
-                    <!-- Log4j 1.x replacements -->
+                    <!-- Log4j 1.x and replacements -->
+                    <exclude>log4j:log4j</exclude>
                     <exclude>org.slf4j:log4j-over-slf4j</exclude>
                     <exclude>ch.qos.reload4j:reload4j</exclude>
                     <!-- Bridges to Log4j 1.x -->
