--- a/log4j-slf4j2-impl/pom.xml
+++ b/log4j-slf4j2-impl/pom.xml
@@ -36,17 +36,19 @@
     (Refer to the `log4j-to-slf4j` artifact for forwarding the Log4j API to SLF4J.)</description>
 
   <properties>
-
-    <!--
-      ~ OSGi and JPMS options
-      -->
-    <bnd.baseline.skip>false</bnd.baseline.skip>
-    <bnd-extra-module-options>
-      <!-- The module descriptor is in `META-INF/versions/9`
-           BND can not find it -->
-      org.slf4j;substitute="slf4j-api"
-    </bnd-extra-module-options>
+    <slf4j2.version>2.0.16</slf4j2.version>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j2.version}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <dependencies>
     <dependency>
       <groupId>org.osgi</groupId>
