--- a/log4j-appserver/pom.xml
+++ b/log4j-appserver/pom.xml
@@ -52,22 +52,32 @@
       org.apache.tomcat.juli;transitive=false,
       org.eclipse.jetty.util;transitive=false
     </bnd-extra-module-options>
+
+    <!-- Dependencies unique for this module -->
+    <jetty.version>9.4.56.v20240826</jetty.version>
+    <tomcat-juli.version>10.0.27</tomcat-juli.version>
   </properties>
 
   <dependencies>
+
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-util</artifactId>
+      <version>${jetty.version}</version>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>org.apache.tomcat</groupId>
       <artifactId>tomcat-juli</artifactId>
+      <version>${tomcat-juli.version}</version>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
     </dependency>
+
   </dependencies>
 </project>
