--- a/.github/workflows/codeql-analysis.yaml
+++ b/.github/workflows/codeql-analysis.yaml
@@ -30,7 +30,7 @@ permissions: read-all
 jobs:
 
   analyze:
-    uses: apache/logging-parent/.github/workflows/codeql-analysis-reusable.yaml@rel/11.2.0
+    uses: apache/logging-parent/.github/workflows/codeql-analysis-reusable.yaml@release/11.3.0
     with:
       java-version: |
         8
