--- a/.github/workflows/develocity-publish-build-scans.yaml
+++ b/.github/workflows/develocity-publish-build-scans.yaml
@@ -29,10 +29,12 @@ jobs:
       actions: write
       pull-requests: write
     steps:
+
       - name: Setup Build Scan link capture
-        uses: gradle/develocity-actions/maven-setup@v1
+        uses: gradle/develocity-actions/maven-setup@9f1bf05334de7eb619731d5466c35a153742311d   # 1.2
+
       - name: Publish Build Scans
-        uses: gradle/develocity-actions/maven-publish-build-scan@v1
+        uses: gradle/develocity-actions/maven-publish-build-scan@9f1bf05334de7eb619731d5466c35a153742311d   # 1.2
         with:
           develocity-url: 'https://ge.apache.org'
           develocity-access-key: ${{ secrets.GE_ACCESS_TOKEN }}
