--- a/pom.xml
+++ b/pom.xml
@@ -302,11 +302,7 @@
   <properties>
 
     <!-- project version -->
-    <revision>2.24.1</revision>
-    <!-- Versions used on the site: no snapshots! -->
-    <site-log4j-api.version>2.24.1</site-log4j-api.version>
-    <site-log4j-core.version>2.24.1</site-log4j-core.version>
-    <site-log4j-layout-template-json.version>2.24.1</site-log4j-layout-template-json.version>
+    <revision>2.24.1-SNAPSHOT</revision>
 
     <!-- =================
          Common properties
@@ -347,6 +343,9 @@
     <site-je.version>18.3.12</site-je.version>
     <site-jeromq.version>0.6.0</site-jeromq.version>
     <site-kafka.version>3.8.0</site-kafka.version>
+    <site-log4j-api.version>2.24.0</site-log4j-api.version>
+    <site-log4j-core.version>2.24.0</site-log4j-core.version>
+    <site-log4j-layout-template-json.version>2.24.0</site-log4j-layout-template-json.version>
     <site-logback.version>1.5.5</site-logback.version>
     <site-slf4j.version>2.0.16</site-slf4j.version>
 
