--- a/log4j-core-test/pom.xml
+++ b/log4j-core-test/pom.xml
@@ -65,6 +65,12 @@
 
   <dependencies>
 
+    <dependency>
+      <groupId>org.jspecify</groupId>
+      <artifactId>jspecify</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
     <!-- Used for OSGi bundle support -->
     <dependency>
       <groupId>org.osgi</groupId>
