--- a/log4j-core-test/pom.xml
+++ b/log4j-core-test/pom.xml
@@ -63,6 +63,7 @@
 
     <!-- Additional version of LMAX Disruptor to test -->
     <disruptor4.version>4.0.0</disruptor4.version>
+    <json-unit.version>2.40.1</json-unit.version>
   </properties>
 
   <dependencies>
@@ -292,12 +293,14 @@
     <dependency>
       <groupId>net.javacrumbs.json-unit</groupId>
       <artifactId>json-unit-assertj</artifactId>
+      <version>${json-unit.version}</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>net.javacrumbs.json-unit</groupId>
       <artifactId>json-unit</artifactId>
+      <version>${json-unit.version}</version>
       <scope>test</scope>
     </dependency>
 
