--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -44,45 +44,7 @@ registries:
 updates:
 
   - package-ecosystem: maven
-    directories:
-      - "/"
-      - "/log4j-1.2-api"
-      - "/log4j-api-test"
-      - "/log4j-api"
-      - "/log4j-appserver"
-      - "/log4j-cassandra"
-      - "/log4j-core-fuzz-test"
-      - "/log4j-core-its"
-      - "/log4j-core-test"
-      - "/log4j-core"
-      - "/log4j-couchdb"
-      - "/log4j-docker"
-      - "/log4j-fuzz-test"
-      - "/log4j-iostreams"
-      - "/log4j-jakarta-smtp"
-      - "/log4j-jakarta-web"
-      - "/log4j-jcl"
-      - "/log4j-jdbc-dbcp2"
-      - "/log4j-jpa"
-      - "/log4j-jpl"
-      - "/log4j-jul"
-      - "/log4j-layout-template-json-fuzz-test"
-      - "/log4j-layout-template-json-test"
-      - "/log4j-layout-template-json"
-      - "/log4j-mongodb"
-        # `log4j-mongodb4` is in a separate run
-      - "/log4j-osgi-test"
-      - "/log4j-parent"
-      - "/log4j-perf-test"
-        # `log4j-slf4j-impl` is in a separate run
-      - "/log4j-slf4j2-impl-fuzz-test"
-      - "/log4j-slf4j2-impl"
-      - "/log4j-spring-boot"
-      - "/log4j-spring-cloud-config-client"
-      - "/log4j-taglib"
-      - "/log4j-to-jul"
-      - "/log4j-to-slf4j"
-      - "/log4j-web"
+    directory: "/"
     open-pull-requests-limit: 10
     schedule:
       interval: "daily"
@@ -92,31 +54,31 @@ updates:
     ignore:
       # Jetty 10.x does not have an internal logging API
       - dependency-name: "org.eclipse.jetty:*"
-        versions: [ "[10,)" ]
+        update-types: [ "version-update:semver-major" ]
       # EclipseLink 3.x is Jakarta EE 9
       - dependency-name: "org.eclipse.persistence:*"
-        versions: [ "[3,)" ]
+        update-types: [ "version-update:semver-major" ]
       # Spring 6.x is Jakarta EE 9
       - dependency-name: "org.springframework:*"
-        versions: [ "[6,)" ]
+        update-types: [ "version-update:semver-major" ]
       # Spring Boot 3.x is Jakarta EE 9
       - dependency-name: "org.springframework.boot:*"
-        versions: [ "[3,)" ]
+        update-types: [ "version-update:semver-major" ]
       # Spring Cloud 2022.x is Jakarta EE 9
       - dependency-name: "org.springframework.cloud:*"
-        versions: [ "[2021,)" ]
+        update-types: [ "version-update:semver-major" ]
       # Tomcat Juli 10.1.x requires Java 11
       - dependency-name: "org.apache.tomcat:*"
-        versions: [ "[10.1,)" ]
+        update-types: [ "version-update:semver-major", "version-update:semver-minor" ]
       # Keep Logback version 1.2.x
       - dependency-name: "ch.qos.logback:*"
-        versions: [ "[1.3,)" ]
+        update-types: [ "version-update:semver-major", "version-update:semver-minor" ]
       # Mockito 5.x requires Java 11
       - dependency-name: "org.mockito:*"
-        versions: [ "[5,)" ]
+        update-types: [ "version-update:semver-major" ]
       # JUnit Pioneer 2.x requires Java 11
       - dependency-name: "org.junit-pioneer:*"
-        versions: [ "[2,)" ]
+        update-types: [ "version-update:semver-major" ]
       # Apache Cassandra: keep version 3.x
       - dependency-name: "org.apache.cassandra:*"
         versions: [ "[4,)" ]
