--- a/pom.xml
+++ b/pom.xml
@@ -232,7 +232,6 @@
 
     <!-- Last comes the rest of the modules in alphabetical order.
          Note that modules here must have a corresponding entry in `dependencyManagement > dependencies` block below! -->
-    <module>jul-to-log4j</module>
     <module>log4j-async-logger</module>
     <module>log4j-compress</module>
     <module>log4j-config-jackson</module>
@@ -250,7 +249,6 @@
     <module>log4j-jdbc-jndi</module>
     <module>log4j-jndi</module>
     <module>log4j-jndi-test</module>
-    <module>log4j-jpl</module>
     <module>log4j-jul</module>
     <module>log4j-kit</module>
     <module>log4j-layout-template-json</module>
@@ -376,12 +374,6 @@
 
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>jul-to-log4j</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-api</artifactId>
         <version>${log4j-api.version}</version>
       </dependency>
@@ -497,7 +489,7 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-jpl</artifactId>
-        <version>${project.version}</version>
+        <version>${log4j-api.version}</version>
       </dependency>
 
       <dependency>
