--- a/log4j-slf4j2-impl/pom.xml
+++ b/log4j-slf4j2-impl/pom.xml
@@ -79,11 +79,6 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-to-slf4j</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <scope>test</scope>
@@ -116,13 +111,24 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <executions>
+          <!-- Separate test execution to verify that the presence of both:
+            ~  * `log4j-slf4j2-impl` (bridge from SLF4J to Log4j API)
+            ~  * `log4j-to-slf4j` (bridge from Log4j API to SLF4J)
+            ~  does not cause a stack overflow.
+            -->
           <execution>
             <id>loop-test</id>
             <goals>
               <goal>test</goal>
             </goals>
-            <phase>test</phase>
             <configuration>
+              <additionalClasspathDependencies>
+                <dependency>
+                  <groupId>org.apache.logging.log4j</groupId>
+                  <artifactId>log4j-to-slf4j</artifactId>
+                  <version>${project.version}</version>
+                </dependency>
+              </additionalClasspathDependencies>
               <includes>
                 <include>**/OverflowTest.java</include>
               </includes>
@@ -130,10 +136,6 @@
           </execution>
           <execution>
             <id>default-test</id>
-            <goals>
-              <goal>test</goal>
-            </goals>
-            <phase>test</phase>
             <configuration>
               <includes>
                 <include>**/*Test.java</include>
@@ -141,9 +143,6 @@
               <excludes>
                 <exclude>**/OverflowTest.java</exclude>
               </excludes>
-              <classpathDependencyExcludes>
-                <classpathDependencyExcludes>org.apache.logging.log4j:log4j-to-slf4j</classpathDependencyExcludes>
-              </classpathDependencyExcludes>
             </configuration>
           </execution>
         </executions>
