--- a/pom.xml
+++ b/pom.xml
@@ -295,7 +295,7 @@
   <properties>
 
     <!-- project version -->
-    <revision>3.0.0-SNAPSHOT</revision>
+    <revision>3.0.0-beta3</revision>
 
     <!-- =================
          Common properties
