--- a/pom.xml
+++ b/pom.xml
@@ -306,7 +306,7 @@
   <properties>
 
     <!-- project version -->
-    <revision>2.24.1</revision>
+    <revision>2.24.2-SNAPSHOT</revision>
     <!-- Versions used on the site: no snapshots! -->
     <site-log4j-api.version>2.24.1</site-log4j-api.version>
     <site-log4j-core.version>2.24.1</site-log4j-core.version>
