--- a/pom.xml
+++ b/pom.xml
@@ -306,11 +306,11 @@
   <properties>
 
     <!-- project version -->
-    <revision>2.24.2-SNAPSHOT</revision>
+    <revision>2.24.2</revision>
     <!-- Versions used on the site: no snapshots! -->
-    <site-log4j-api.version>2.24.1</site-log4j-api.version>
-    <site-log4j-core.version>2.24.1</site-log4j-core.version>
-    <site-log4j-layout-template-json.version>2.24.1</site-log4j-layout-template-json.version>
+    <site-log4j-api.version>2.24.2</site-log4j-api.version>
+    <site-log4j-core.version>2.24.2</site-log4j-core.version>
+    <site-log4j-layout-template-json.version>2.24.2</site-log4j-layout-template-json.version>
 
     <!-- =================
          Common properties
