Add `log4j.plugin.enableBndAnnotations` option to `PluginProcessor`
This adds a `log4j.plugin.enableBndAnnotations` option to the `PluginProcessor`. Its default value is inferred from the compiler classpath.

We also rename the `pluginPackage` option to a more coherent `log4j.plugin.package` option.

Closes #3251

--- a/log4j-parent/pom.xml
+++ b/log4j-parent/pom.xml
@@ -865,7 +865,7 @@
                 <id>default-testCompile</id>
                 <configuration>
                   <compilerArgs combine.children="append">
-                    <arg>-ApluginPackage=${log4jPluginPackageForTests}</arg>
+                    <arg>-Alog4j.plugin.package=${log4jPluginPackageForTests}</arg>
                   </compilerArgs>
                 </configuration>
               </execution>
