Backported changes from the 3.x branch to 2.x

--- a/src/site/antora/modules/ROOT/examples/manual/appenders/database/nosql-mongo.properties
+++ b/src/site/antora/modules/ROOT/examples/manual/appenders/database/nosql-mongo.properties
@@ -22,7 +22,9 @@ appender.0.layout.type = JsonTemplateLayout
 appender.1.type = NoSql
 appender.1.name = MONGO
 appender.1.provider.type = MongoDB
-appender.1.provider.connection = mongodb://${env:DB_USER}:${env:DB_PASS}@localhost:27017/logging.logs
+appender.1.provider.connection = mongodb://${env:DB_USER}:${env:DB_PASS}@localhost:27017/
+appender.1.provider.databaseName = logging
+appender.1.provider.collectionName = logs
 # end::appender[]
 # tag::loggers[]
 rootLogger.level = INFO
