--- a/src/site/antora/modules/ROOT/examples/manual/appenders/database/nosql-mongo-keys.properties
+++ b/src/site/antora/modules/ROOT/examples/manual/appenders/database/nosql-mongo-keys.properties
@@ -19,7 +19,9 @@
 appender.0.type = NoSql
 appender.0.name = MONGO
 appender.0.provider.type = MongoDB
-appender.0.provider.connection = mongodb://${env:DB_USER}:${env:DB_PASS}@localhost:27017/logging.logs
+appender.0.provider.connection = mongodb://${env:DB_USER}:${env:DB_PASS}@localhost:27017
+appender.0.provider.databaseName = logging
+appender.0.provider.collectionName = logs
 
 appender.0.kv[0].type = KeyValuePair
 appender.0.kv[0].key = startTime
