Add option to provide URIs to monitor in addition to the config file
A change detected in either the config file itself or the provided additional URIs shall result in a reconfigure

Signed-off-by: MichaelMorris <michael.morris@est.tech>

--- a/log4j-core-test/src/test/resources/log4j-test2.properties
+++ b/log4j-core-test/src/test/resources/log4j-test2.properties
@@ -18,6 +18,7 @@
 status = debug
 name = PropertiesConfigTest
 monitorInterval = 1
+monitorUris = target/test-classes/org/apache/logging/log4j/core/net/ssl/keyStore.p12
 
 property.filename = target/test-properties.log
 
