Move `jspecify` to `provided` scope in `log4j-api`

--- a/log4j-api/pom.xml
+++ b/log4j-api/pom.xml
@@ -68,12 +68,10 @@
       <scope>provided</scope>
     </dependency>
 
-    <!--
-      ~ Effectively optional, but included due to its size and the compilation warnings its absence causes.
-      -->
     <dependency>
       <groupId>org.jspecify</groupId>
       <artifactId>jspecify</artifactId>
+      <scope>provided</scope>
     </dependency>
 
   </dependencies>
